tests/compile-errors.txt
Mac-mini:tests admin$ clang info.c -I/abc/include -L/abc/lib -limobiledevice  -lplist -lusbmuxd -lssl -lcrypto -o info
info.c:49:14: warning: implicit declaration of function 'device_create' is invalid in C99 [-Wimplicit-function-declaration]
    device = device_create(NULL);
             ^
info.c:49:12: warning: incompatible integer to pointer conversion assigning to 'idevice_private *' (aka 'struct idevice_private *') from 'int' [-Wint-conversion]
    device = device_create(NULL);
           ^ ~~~~~~~~~~~~~~~~~~~
info.c:52:24: warning: implicit declaration of function 'lockdown_open' is invalid in C99 [-Wimplicit-function-declaration]
lockdown_t *lockdown = lockdown_open(device);
                       ^
info.c:52:13: warning: incompatible integer to pointer conversion initializing 'lockdown_t *' (aka 'struct lockdown_t *') with an expression of type 'int' [-Wint-conversion]
lockdown_t *lockdown = lockdown_open(device);
            ^          ~~~~~~~~~~~~~~~~~~~~~
info.c:57:36: warning: incompatible pointer types passing 'lockdown_t *' (aka 'struct lockdown_t *') to parameter of type 'lockdownd_client_t'
      (aka 'struct lockdownd_client_private *') [-Wincompatible-pointer-types]
             lockdownd_client_free(lockdown);
                                   ^~~~~~~~
/abc/include/libimobiledevice/lockdown.h:129:60: note: passing argument to parameter 'client' here
lockdownd_error_t lockdownd_client_free(lockdownd_client_t client);
                                                           ^
5 warnings generated.
Undefined symbols for architecture x86_64:
  "_device_create", referenced from:
      _main in info-8nYzvz.o
  "_lockdown_open", referenced from:
      _main in info-8nYzvz.o
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)
Mac-mini:tests admin$ 
